# close-all-prs-on-repository

./: README.md  main.py  pyproject.toml
