[tool.poetry]
name = "close-all-prs-on-repository"
version = "0.1.0"
description = ""
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]
readme = "README.md"
packages = [{include = "close_all_prs_on_repository"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
